syntax = "proto3";

package getresource;

message GetResourceRequest {
    string ResourcePath = 1;
    string KbcName = 2;
    string KbsUri = 3;
    string ExtraCredential = 4;
}

message GetResourceResponse {
    bytes Resource = 1;
}

service GetResourceService {
    rpc GetResource(GetResourceRequest) returns (GetResourceResponse) {};
}
