syntax = "proto3";

package api;

message UnsealSecretInput {
    bytes secret = 1;
}

message UnsealSecretOutput {
    bytes plaintext = 1;
}

message ExtraCredential {
    string ControllerCrpToken = 1;
    string ControllerAttestationReport = 2;
    string ControllerCertChain = 3;
    string AAAttester = 4;
    string ExtraRequest = 5;
}

message GetResourceRequest {
    string ResourcePath = 1;
    ExtraCredential ExtraCredential = 2;
}

message GetResourceResponse {
    bytes Resource = 1;
}

message SetResourceRequest {
    string ResourcePath = 1;
    bytes Resource = 2;
}

message SetResourceResponse {
    bytes Response = 1;
}

message DeleteResourceRequest {
    string ResourcePath = 1;
    bytes Resource = 2;
}

message DeleteResourceResponse {
    bytes Response = 1;
}

service SealedSecretService {
    rpc UnsealSecret(UnsealSecretInput) returns (UnsealSecretOutput) {};
}

service ResourceService {
    rpc GetResource(GetResourceRequest) returns (GetResourceResponse) {};
    rpc SetResource(SetResourceRequest) returns (SetResourceResponse) {};
    rpc DeleteResource(DeleteResourceRequest) returns (DeleteResourceResponse) {};
}
